Minor CSS fixes to form validation + nav links in header (#53)
* Don't double red line forms

When we have a "form error" (like "email and password do not belong
to a user"), we give the whole form a red border.
Whereas when we have an error with one specific field ("email must
be less than 200 words"), we give that field a red border.

When we had both, the borders would stack. Now they don't.

* Stack header nav links on mobile

Our site looks pretty good on mobile except for the top nav,
with a broken layout that's one of the first things you see.

This CSS isn't meant to be the final design or anything, but
it improves our top nav layout on mobile until such time as
we want to solve this some other way.

--- a/profiles/static/scss/components/_nav.scss
+++ b/profiles/static/scss/components/_nav.scss
@@ -6,7 +6,6 @@ nav {
 
     li {
       display: inline-block;
-      margin-right: $space-md;
 
       a {
         display: inline-block;
@@ -16,8 +15,22 @@ nav {
 }
 
 .nav--header {
-  li:last-of-type {
-    margin-right: 0;
+  font-size: 0.8em;
+
+  @include sm {
+    font-size: 0.9em;
+  }
+
+  ul {
+    text-align: right;
+  }
+
+  li {
+    margin-left: $space-md;
+
+    &:first-of-type {
+      margin-left: 0;
+    }
   }
 }
 
